--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Port number
-PORT=3000
+PORT=3001
 
 # URL of the Mongo DB
 MONGODB_URL=mongodb://127.0.0.1:27017/node-boilerplate
+MONGODB_DB_NAME=ellaskincare
 
 # JWT
 # JWT secret key
