--- a/config/config.json
+++ b/config/config.json
@@ -8,16 +8,16 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "password": "Ella2022.",
+    "database": "ella",
+    "host": "34.101.196.158",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "password": "Ella2022.",
+    "database": "ella",
+    "host": "34.101.196.158",
     "dialect": "mysql"
   }
 }
